# Humanoid-SRC-IRC

./: README.md
ahra/: CMakeLists.txt
ahra/devel/: .catkin
ahra/devel/include/ahra/: Emergency.h  EmergencyRequest.h  EmergencyResponse.h  RL_NeckAngle.h  RL_NeckAngleRequest.h  RL_NeckAngleResponse.h  Select_Motion.h  Select_MotionRequest.h  Select_MotionResponse.h  SendMotion.h  SendMotionRequest.h  SendMotionResponse.h  Turn_Angle.h  Turn_AngleRequest.h  Turn_AngleResponse.h  UD_NeckAngle.h  UD_NeckAngleRequest.h  UD_NeckAngleResponse.h
ahra/devel/lib/ahra/: Move_decision_node  Sensor_node
ahra/devel/lib/pkgconfig/: ahra.pc
ahra/devel/lib/python3/dist-packages/ahra/srv/: _Emergency.py  _RL_NeckAngle.py  _Select_Motion.py  _SendMotion.py  _Turn_Angle.py  _UD_NeckAngle.py  __init__.py
ahra/devel/share/ahra/cmake/: ahra-msg-paths.cmake  ahraConfig.cmake
ahra/devel/share/common-lisp/ros/ahra/srv/: Emergency.lisp  RL_NeckAngle.lisp  Select_Motion.lisp  SendMotion.lisp  Turn_Angle.lisp  UD_NeckAngle.lisp  _package.lisp  _package_Emergency.lisp  _package_RL_NeckAngle.lisp  _package_Select_Motion.lisp  _package_SendMotion.lisp  _package_Turn_Angle.lisp  _package_UD_NeckAngle.lisp  ahra-srv.asd
ahra/devel/share/gennodejs/ros/ahra/srv/: Emergency.js  RL_NeckAngle.js  Select_Motion.js  SendMotion.js  Turn_Angle.js  UD_NeckAngle.js  _index.js
ahra/devel/share/roseus/ros/ahra/: manifest.l
ahra/devel/share/roseus/ros/ahra/srv/: Emergency.l  RL_NeckAngle.l  Select_Motion.l  SendMotion.l  Turn_Angle.l  UD_NeckAngle.l
ahra/include/: Move_decision.hpp  Walkingpattern_generator.hpp  callback.hpp  dynamixel.hpp  img_proc.hpp
ahra/src/: Move_decision2.cpp  Walkingpattern_generator.cc  callback.cpp  dynamixel.cpp  img_proc2.cpp  main.cpp  sensor.cpp
ahra/src/ahra/include/: dynamixel.hpp  img_proc.hpp
ahra/src/ahra/launch/: Move_decision.launch
ahra/src/ahra/src/: Move_decision2.cpp  Walkingpattern_generator.cc  dynamixel_controller.cpp  main.cpp
src/ahra/: CMakeLists.txt
src/ahra/include/: Move_decision.hpp  Walkingpattern_generator.hpp  callback.hpp
src/ahra/launch/: dynamixel_current_2port.launch
src/ahra/src/: callback.cpp  dynamixel.cpp  img_proc.cu
src/ahra/srv/: SendMotion.srv
